--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ h2 {
 .container {
   /* padding: 1rem 0.5rem; */
   /* height: 400px; */
-  max-width: 400px;
+  width: 400px;
   display: flex;
 }
 
